Reload index after any change

--- a/internal/handler/static/new.html
+++ b/internal/handler/static/new.html
@@ -76,7 +76,7 @@
             })
             .then(data => {
               alert('Shortcut created successfully');
-              window.location.href = '/'; // Redirect to index when done
+              window.location.href = '/';
             })
             .catch(error => {
               console.error('Error:', error);
