--- a/internal/handler/static/index.html
+++ b/internal/handler/static/index.html
@@ -60,10 +60,14 @@
         redirectsTableBody.addEventListener('click', function(event) {
           if (event.target.classList.contains('delete-button')) {
             const id = event.target.getAttribute('data-id');
-            console.log(`Deleting row with ID ${id}`);
             fetch(`/${id}`, {
               method: 'DELETE',
-            }).catch(error => {
+            })
+            .then(data => {
+              alert('Shortcut deleted successfully');
+              window.location.href = '/';
+            })
+            .catch(error => {
               console.error('Error deleting row:', error);
             });
           }
