--- a/internal/handler/static/index.html
+++ b/internal/handler/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Go/Links</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="static/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&display=swap">
   </head>
   <body>
@@ -25,7 +25,7 @@
             <tr>
               <th>Path</th>
               <th>URL</th>
-              <th class="action-column"/>
+              <th class="action-column"></th>
             </tr>
           </thead>
           <tbody id="redirectsTableBody">
@@ -36,8 +36,9 @@
     </div>
 
     <script>
+        const apiPath = '/api/v1'
       const redirectsTableBody = document.getElementById('redirectsTableBody');
-      fetch('/redirects')
+      fetch(apiPath + '/all')
         .then(response => response.json())
         .then(data => {
           for (const path in data) {
@@ -64,7 +65,7 @@
         redirectsTableBody.addEventListener('click', function(event) {
           if (event.target.classList.contains('delete-button')) {
             const id = event.target.getAttribute('data-id');
-            fetch(`/${id}`, {
+            fetch(apiPath + `/${id}`, {
               method: 'DELETE',
             })
             .then(data => {
