Prevent table wrapping for long shortcuts and targets

--- a/internal/handler/static/index.html
+++ b/internal/handler/static/index.html
@@ -20,7 +20,7 @@
 
       </pre>
     <div class="table-container">
-        <table>
+        <table class="nowrap-table">
             <thead>
             <tr>
                 <th>Path</th>
